Junit Test 100% Complete