@@ -9,7 +9,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(23)
+		languageVersion = JavaLanguageVersion.of(21)
 	}
 }
 
@@ -23,6 +23,10 @@ repositories {
 	mavenCentral()
 }
 
+
+test {
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -34,6 +38,11 @@ dependencies {
 
 	//	Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
+
+	testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+
+//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-core:5.11.0'
 }
 
 tasks.named('test') {
